--- a/index.html
+++ b/index.html
@@ -25,6 +25,43 @@
         </div>
         <img src="https://images.pexels.com/photos/1101720/pexels-photo-1101720.jpeg?cs=srgb&dl=pexels-tim-mossholder-1101720.jpg&fm=jpg&_gl=1*1f3zykq*_ga*NTAwOTUxMTkyLjE2NjY2NDc2NDc.*_ga_8JE65Q40S6*MTY2NjY0NzY0Ny4xLjEuMTY2NjY0Nzg2MS4wLjAuMA.." alt="awesome" width="400" height="200">
     </div>
-
+    <div class="information">
+        <div class="header">Some random information.</div>
+        <div class="image">
+            <img width="100" height="100">
+            <div class="subtext">this is some subtext
+                under an illustration
+                or image</div>
+                <img width="100" height="100">
+            <div class="subtext">this is some subtext
+                under an illustration
+                or image</div>
+                <img width="100" height="100">
+            <div class="subtext">this is some subtext
+                under an illustration
+                or image</div>
+                <img width="100" height="100">
+            <div class="subtext">this is some subtext
+                under an illustration
+                or image</div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="text">
+            This is an inspiring quote, or a testimonial from a
+            customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All | know
+            is that it looks nice.
+        </div>  
+        <div class="reference">
+            -Thor, God of Thunder
+        </div>
+    </div>
+    <div class="warning">
+        <div class="title">Call to action! It's time!</div>
+        <div class="text">Sign up for our product by clicking that button right over there!</div>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
