--- a/index.html
+++ b/index.html
@@ -4,44 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
     <title>Project 1</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
-        <ul>
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
-        </ul>
-        <div class="title">
-            <div class="main-title" >This Website is Awesome</div>
-            <div class="text">
-                This website has some subtext that goes here under the
-                main title. It's a smaller font and the color is lower
-                contrast
+        <div class="left">
+            <div class="logo">Header Logo</div>
+            <div class="title">
+                <div class="page-title" >This website is awesome</div>
+                <div class="text">
+                    This website has some subtext that goes here under the
+                    main title. It's a smaller font and the color is lower
+                    contrast
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
+
         </div>
-        <img src="https://images.pexels.com/photos/1101720/pexels-photo-1101720.jpeg?cs=srgb&dl=pexels-tim-mossholder-1101720.jpg&fm=jpg&_gl=1*1f3zykq*_ga*NTAwOTUxMTkyLjE2NjY2NDc2NDc.*_ga_8JE65Q40S6*MTY2NjY0NzY0Ny4xLjEuMTY2NjY0Nzg2MS4wLjAuMA.." alt="awesome" width="400" height="200">
+        <div class="right">
+            <ul>
+                <a>header link one</a>
+                <a>header link two</a>
+                <a>header link three</a>
+            </ul>
+            <img src="https://images.pexels.com/photos/1101720/pexels-photo-1101720.jpeg?cs=srgb&dl=pexels-tim-mossholder-1101720.jpg&fm=jpg&_gl=1*1f3zykq*_ga*NTAwOTUxMTkyLjE2NjY2NDc2NDc.*_ga_8JE65Q40S6*MTY2NjY0NzY0Ny4xLjEuMTY2NjY0Nzg2MS4wLjAuMA.." alt="awesome" width="400" height="200">    
+        </div>
     </div>
+    <div class="title-two">Some random information.</div>
     <div class="information">
-        <div class="header">Some random information.</div>
         <div class="image">
-            <img width="100" height="100">
+            <img width="160" height="160">
             <div class="subtext">this is some subtext
                 under an illustration
                 or image</div>
-                <img width="100" height="100">
+        </div>
+        <div class="image">    
+            <img width="160" height="160">
             <div class="subtext">this is some subtext
                 under an illustration
                 or image</div>
-                <img width="100" height="100">
+        </div>
+        <div class="image">
+            <img width="160" height="160">
             <div class="subtext">this is some subtext
                 under an illustration
                 or image</div>
-                <img width="100" height="100">
+        </div>
+        <div class="image">
+            <img width="160" height="160">
             <div class="subtext">this is some subtext
                 under an illustration
                 or image</div>
@@ -51,7 +62,7 @@
         <div class="text">
             This is an inspiring quote, or a testimonial from a
             customer. Maybe it's just filling up space, or maybe
-            people will actually read it. Who knows? All | know
+            people will actually read it. Who knows? All I know
             is that it looks nice.
         </div>  
         <div class="reference">
@@ -59,8 +70,10 @@
         </div>
     </div>
     <div class="warning">
-        <div class="title">Call to action! It's time!</div>
-        <div class="text">Sign up for our product by clicking that button right over there!</div>
+        <div class="message">
+            <div class="w title">Call to action! It's time!</div>
+            <div class="w text">Sign up for our product by clicking that button right over there!</div>
+        </div>
         <button>Sign up</button>
     </div>
     <div class="footer">Copyright © The Odin Project 2021</div>
